# blog_posts

./: .editorconfig  .gitignore  mapbox-mcp-crewai-updated.md  mapbox-mcp-crewai.md  mapbox-mcp-intro.md  package.json
crewai/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  travel_planner.py
mastra/: .env.example  README.md  next.config.js  package-lock.json  package.json
mastra-oauth/: .env.example  README.md  package-lock.json  package.json
mastra-oauth/src/app/: layout.tsx  page.tsx
mastra-oauth/src/app/api/category-search/: route.ts
mastra-oauth/src/app/api/plan/: route.ts
mastra-oauth/src/app/api/query/: route.ts
mastra-oauth/src/app/auth/callback/: route.ts
mastra-oauth/src/components/: AttractionSelector.tsx  CategorySearch.tsx  DCMap.tsx
mastra-oauth/src/lib/: agent.ts  mcp.ts  oauth.ts
mastra/src/app/: globals.css  page.tsx
mastra/src/app/api/category-search/: route.ts
mastra/src/app/api/plan/: route.ts
mastra/src/app/api/query/: route.ts
mastra/src/components/: CategorySearch.tsx
mastra/src/lib/: agent.ts  mcp.ts
mastra/src/types/: index.ts
