[project]
name = "mapbox-mcp-crewai-example"
version = "0.1.0"
description = "Example of integrating Mapbox MCP with CrewAI for location-aware agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "uv>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
